# domain_autoreg_openprovider

./: .env.example  .gitignore  README.md  __main__.py  config.example.yaml  pyproject.toml  start_gui.example.bat  stop_gui.example.bat
domain_autoreg/: __init__.py  cli.py  config.py  db.py  domain.py  notifier.py  openprovider.py  service.py
domain_autoreg/gui/: __init__.py  runner.py  settings.py  web.py
tests/: test_cli.py  test_config.py  test_db.py  test_domain.py  test_gui_runner.py  test_gui_safety.py  test_gui_settings.py  test_openprovider.py  test_service.py  test_telegram.py
